--- a/styles/global.css
+++ b/styles/global.css
@@ -1,1 +1,14 @@
-html,body,#__next{height:100%;padding:0;margin:0;}*{box-sizing:border-box;}
+/* styles/globals.css */
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #6200ea;
+  color: white;
+}
+
+* {
+  box-sizing: border-box;
+}
